# Local-Multi-Agent-Automation-Framework-with-UI

./: .env.example  .gitignore  README.md  Runner.command  Runner_API.command  all_code.txt  api.py  main.py  pyproject.toml  requirements.txt  settings.json  user_preferences.json
agents/: README.md  research_agent.yaml  researcher.yaml
core/: __init__.py  agent_loader.py  base_agent.py  config.py  critic.py  custom_agent_runner.py  events.py  factory.py  health_check.py  llm_client.py  logger.py  models.py  orchestrator.py  plan_execution_engine.py  planner.py  planning_context.py  prompt_loader.py  protocols.py  response_parser.py  router.py  safety_gate.py  step_runner.py  voice.py  worker.py
core/executor/: __init__.py  base.py  browser_executor.py  cli_executor.py  dispatcher.py  gui_executor.py
local_multi_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memory/: __init__.py  chroma_store.py  preferences.py  skill_library.py
plugins/: README.md  __init__.py  example_plugin.py
prompts/: critic.yaml  planner.yaml  router.yaml  safety.yaml  worker.yaml
skills/: how_to_take_a_screen_short.json  now_of_apps_are_there_in_dock_even_if_theya_re_ope.json  open_brave_in_my_pc_and_go_to_gemini_google_ai_and.json  open_safari.json
tests/: conftest.py  test_safety_gate.py  test_step_runner.py
tests/fakes/: memory.py
tools/: example_tools.py
vision/: __init__.py  screen_capture.py  ui_parser.py  verifier.py
vision_ext/: pyproject.toml  setup.py  vision_parser.cpp
vision_ext/vision_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
