[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-multi-agent-framework"
version = "1.0.0"
description = "A local, autonomous multi-agent framework for OS automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb>=0.4.22",
    "rich",
    "pyyaml",
    "playwright>=1.40.0",
    "aiohttp",
    "pydantic",
    "ollama>=0.1.6",
    "mss>=9.0.1",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "Pillow>=10.2.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "psutil",
    "SpeechRecognition>=3.10.0",
    "websockets",
    "jinja2",
]

# Platform-specific dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "flake8",
    "black",
    "mypy"
]
macos = [
    "pyobjc-core<12.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz<12.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices<12.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreText<12.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa<12.0; sys_platform == 'darwin'",
    "pyobjc<12.0; sys_platform == 'darwin'",
    "textual>=0.40.0; sys_platform == 'darwin'",
]
windows = [
    "textual>=0.40.0; sys_platform == 'win32'",
]
linux = [
    "textual>=0.40.0; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "memory*", "vision*", "agents*", "plugins*", "tools*", "skills*", "tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
